# sqbucket

./: .gitignore  README.md  pyproject.toml
example/: pyproject.toml
example/sqbucket_example/: meta.py
sqbucket/: __init__.py  config.py  sqlpkg.py
