[tool.poetry]
name = "sqbucket"
version = "0.1.0"
description = "Self-contained sqlpkg-based sqlite for python"
authors = ["lightmanLP <liteman1000@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UT1C/sqbucket"
repository = "https://github.com/UT1C/sqbucket"
keywords = ["sqlite", "sqlpkg"]
packages = [{include = "sqbucket"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
typing-extensions = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
